Update special message and remove redundancy

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special for Lazi , Rrezearta <3!
+               Rrezearta You are Special for Lazi, and you will always be!! <3!
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -149,7 +149,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it, Okay My Love?</p>
+            <p>Okay, now come back and tell me if you liked it, Okay?</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
